--- a/Index.html
+++ b/Index.html
@@ -35,23 +35,27 @@
         </div>
     </header>
     <div class="Hero-bilde">
-        <h1>Sander's <br>Matblogg</h1>
+        <!-- <h1>Sander's <br>Matblogg</h1> -->
         <img src="./pictures/HeroBilde.jpg" alt="Bilde av kjøkken som er nydelig ryddet og ordnet opp">
     </div>
     <main>
         <div id="scroller">
         </div>
     </main>
-    <aside>
+    <aside class="grid-container">
         <div id="index-posts">
             <img src="./pictures/Pizza.jpg" alt="Pizza e digg">
             <h2>Oppskrifter</h2>
-            <button class="Button-white">Se mer</button>
+            <form action="./detailpost.html">            
+                <button class="Button-white">Se mer</button>
+            </form>
         </div>
         <div id="index-aboutus">
             <img src="./pictures/AboutUs.jpg" alt="Bilde av en mat som står på et kjøkken">
             <h2>Bli kjent med Sander</h2>
-            <button>Les mer</button>
+            <form action="./Aboutus.html">            
+                <button>Les mer</button>
+            </form>
         </div>
     </aside>
     <footer>
