--- a/Aboutus.html
+++ b/Aboutus.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Food, blog, school">
     <title>Om oss</title>
     <script src="./Script/aboutus.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/headerandfooter.css">
     <link rel="stylesheet" href="./Style/aboutus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -27,7 +28,7 @@
             </ul>
         </div>
         <div class="meny">
-            <i class="fa-solid fa-bars"></i>
+            <i  id="meny" class="fa-solid fa-bars"></i>
         </div>
 
     </header>
