--- a/Form.html
+++ b/Form.html
@@ -11,6 +11,7 @@
     <script src="./Script/form.js" defer></script>
     <link rel="stylesheet" href="./Style/headerandfooter.css">
     <link rel="stylesheet" href="./Style/form.css">
+    <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
@@ -27,7 +28,7 @@
             </ul>
         </div>
         <div class="meny">
-            <i class="fa-solid fa-bars"></i>
+            <i id="meny" class="fa-solid fa-bars"></i>
         </div>
 
     </header>
