--- a/detailpost.html
+++ b/detailpost.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Food, blog, school">
     <title></title>
     <script src="./Script/detailpost.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/headerandfooter.css">
     <link rel="stylesheet" href="./Style/detailpost.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -26,7 +27,7 @@
                 <li><a href="./Aboutus.html">Om oss</a></li>
             </ul>
             <div class="meny">
-                <i class="fa-solid fa-bars"></i>
+                <i id="meny" class="fa-solid fa-bars"></i>
             </div>
     
         </div>
