--- a/detailpost.html
+++ b/detailpost.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Food, blog, school">
     <title></title>
     <script src="./Script/detailpost.js" defer></script>
+    <script src="./Script/header.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/headerandfooter.css">
     <link rel="stylesheet" href="./Style/detailpost.css">
@@ -16,20 +17,19 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <p><a href="./Index.html">Sander's <br>Matblogg</a></p>
+        <div>
+            <p class="logo"><a href="./Index.html">Sander's <br>Matblogg</a></p>
+        </div>        
+        <div>
+            <i id="meny" class="fa-solid fa-bars"></i>
         </div>
-        <div class="menu">
+        <div id="menyListe">
             <ul>
                 <li><a href="./Index.html">Hjem</a></li>
                 <li><a href="./post.html">Oppskrifter</a></li>
                 <li><a href="./Form.html">Kontakt oss</a></li>
                 <li><a href="./Aboutus.html">Om oss</a></li>
             </ul>
-            <div class="meny">
-                <i id="meny" class="fa-solid fa-bars"></i>
-            </div>
-    
         </div>
     </header>
     <main>
