--- a/Aboutus.html
+++ b/Aboutus.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Food, blog, school">
     <title>Om oss</title>
     <script src="./Script/aboutus.js" defer></script>
+    <script src="./Script/header.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/headerandfooter.css">
     <link rel="stylesheet" href="./Style/aboutus.css">
@@ -16,10 +17,13 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <p><a href="./Index.html">Sander's <br>Matblogg</a></p>
+        <div>
+            <p class="logo"><a href="./Index.html">Sander's <br>Matblogg</a></p>
+        </div>        
+        <div>
+            <i id="meny" class="fa-solid fa-bars"></i>
         </div>
-        <div class="menu">
+        <div id="menyListe">
             <ul>
                 <li><a href="./Index.html">Hjem</a></li>
                 <li><a href="./post.html">Oppskrifter</a></li>
@@ -27,13 +31,9 @@
                 <li style="text-decoration: underline;"><a href="./Aboutus.html">Om oss</a></li>
             </ul>
         </div>
-        <div class="meny">
-            <i  id="meny" class="fa-solid fa-bars"></i>
-        </div>
-
     </header>
     <main>
-        <div>
+        <div id="aboutUsImg">
             <img src="./pictures/AboutUs.jpg" alt="Hero bilde av en fyr på kjøkkenet">
         </div>
         <div>
