--- a/Index.html
+++ b/Index.html
@@ -38,18 +38,20 @@
         <!-- <h1>Sander's <br>Matblogg</h1> -->
         <img src="./pictures/HeroBilde.jpg" alt="Bilde av kjøkken som er nydelig ryddet og ordnet opp">
     </div>
+    <!-- <h1>Sander's Matblogg</h1> -->
     <main>
         <div id="scroller">
         </div>
         <div>
-            
+            <span class="arrow-left">&#8594</span>        
+            <span class="arrow-right">&#8592</span>    
         </div>
     </main>
     <aside class="grid-container">
         <div id="index-posts">
             <img src="./pictures/Pizza.jpg" alt="Pizza e digg">
             <h2>Oppskrifter</h2>
-            <form action="./detailpost.html">            
+            <form action="./post.html">            
                 <button class="Button-white">Se mer</button>
             </form>
         </div>
