--- a/post.html
+++ b/post.html
@@ -20,16 +20,17 @@
         <div>
             <p class="logo"><a href="./Index.html">Sander's <br>Matblogg</a></p>
         </div>        
-        <div>
-            <i id="meny" class="fa-solid fa-bars"></i>
-        </div>
         <div id="menyListe">
             <ul>
                 <li><a href="./Index.html">Hjem</a></li>
-                <li style="text-decoration: underline;"><a href="./post.html">Oppskrifter</a></li>
+                <li style="text-decoration: underline;     text-decoration-thickness: 1px;
+                " ><a href="./post.html">Oppskrifter</a></li>
                 <li><a href="./Form.html">Kontakt oss</a></li>
                 <li><a href="./Aboutus.html">Om oss</a></li>
             </ul>
+        </div>
+        <div>
+            <i id="meny" class="fa-solid fa-bars"></i>
         </div>
     </header>
     <main>
@@ -37,7 +38,7 @@
         <div id="blogPosts">
         </div>
         <div id="lastInn">
-            <button>Last inn flere</button>
+            <button id="lastInnBtn" onclick= >Last inn flere</button>
         </div>
     </main>
 
