--- a/Index.html
+++ b/Index.html
@@ -44,8 +44,8 @@
         <div id="scroller">
         </div>
         <div>
-            <span class="arrow-left">&#8594</span>        
-            <span class="arrow-right">&#8592</span>    
+            <span class="arrow-left">&#8594;</span>        
+            <span class="arrow-right">&#8592;</span>    
         </div>
     </main>
     <aside class="grid-container">
