--- a/post.html
+++ b/post.html
@@ -38,7 +38,7 @@
         <div id="blogPosts">
         </div>
         <div id="lastInn">
-            <button id="lastInnBtn" onclick= >Last inn flere</button>
+            <button id="lastInnBtn">Last inn flere</button>
         </div>
     </main>
 
