--- a/detailpost.html
+++ b/detailpost.html
@@ -7,7 +7,7 @@
     <meta name="description" content="recipe site of sanders blogg, where u can make food after his delicious recipies">
     <meta name="author" content="Sander Hammersland">
     <meta name="keywords" content="Food, blog, school">
-    <title></title>
+    <title> </title>
     <script src="./Script/detailpost.js" defer></script>
     <script src="./Script/header.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;600&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
     <main>
         <div id="postDetails">
         </div>
-        <button><a href="./post.html">Tilbake</a></button>
+        <a href="./post.html">Tilbake</a>
     </main>
     <footer>
         <div class="link-footer">
