--- a/detailpost.html
+++ b/detailpost.html
@@ -35,7 +35,7 @@
     <main>
         <div id="postDetails">
         </div>
-        <a href="./post.html">Tilbake</a>
+        <a id="tilbake" href="./post.html">Tilbake</a>
     </main>
     <footer>
         <div class="link-footer">
